--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,8 +7,9 @@ on:
         type: choice
         description: 'Choose the image to build'
         required: true
-        default: 'gravitino-ci-hive'
+        default: 'gravitino'
         options:
+          - 'gravitino'
           - 'gravitino-ci-hive'
           - 'gravitino-ci-trino'
       tag:
@@ -36,9 +37,10 @@ jobs:
           elif [ "${{ github.event.inputs.image }}" == "gravitino-ci-trino" ]; then
             echo "image_type=trino" >> $GITHUB_ENV
             echo "image_name=datastrato/gravitino-ci-trino" >> $GITHUB_ENV
+          elif [ "${{ github.event.inputs.image }}" == "gravitino" ]; then
+            echo "image_type=gravitino" >> $GITHUB_ENV
+            echo "image_name=datastrato/gravitino" >> $GITHUB_ENV
           fi
-
-      - uses: actions/checkout@v3
 
       - name: Check publish Docker token
         run: |
@@ -58,6 +60,25 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        if: ${{ github.event.inputs.image == 'gravitino' }}
+        with:
+          gradle-version: '8.2'
+
+      - name: Package Gravitino
+        if: ${{ github.event.inputs.image == 'gravitino' }}
+        run: |
+          gradle --version
+          gradle compileDistribution -x test
 
       - name: Build and Push the main branch Docker image
         if: ${{ github.ref_name == 'main' }}
