--- a/catalogs/catalog-jdbc-postgresql/src/main/resources/jdbc-postgresql.conf
+++ b/catalogs/catalog-jdbc-postgresql/src/main/resources/jdbc-postgresql.conf
@@ -2,6 +2,7 @@
 # Copyright 2023 Datastrato.
 # This software is licensed under the Apache License version 2.
 #
-# jdbc-url: jdbc:mysql://localhost:3306/
+# jdbc-url: jdbc:postgresql://localhost:5432/your_database
 # jdbc-user: strato
 # jdbc-password: strato
+# jdbc-database: your_database
