[#588] No need to start Yarn in gravitino docker container

--- a/dev/docker/hive/Dockerfile
+++ b/dev/docker/hive/Dockerfile
@@ -155,7 +155,7 @@ RUN rm -rf /tmp/packages
 
 ################################################################################
 # expose port
-EXPOSE 22 3306 8088 9000 9083 10000 10002 50070 50075 50010
+EXPOSE 3306 9000 9083 10000 10002 50070 50075 50010
 
 ################################################################################
 # create startup script and set ENTRYPOINT
