--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@
 org.gradle.parallel=true
 # Build cache can be disabled with --no-build-cache option
 org.gradle.caching=true
+org.gradle.jvmargs=-Xmx4g
 
 #version that is going to be updated automatically by releases
 version = 0.3.0-SNAPSHOT
