--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,30 +4,30 @@
 #
 [versions]
 junit = "5.8.1"
-protoc = "3.17.3"
+protoc = "3.24.4"
 jackson = "2.15.2"
-guava = "29.0-jre"
+guava = "32.1.3-jre"
 lombok = "1.18.20"
-slf4j = "2.0.7"
-log4j = "2.20.0"
+slf4j = "2.0.9"
+log4j = "2.22.0"
 jetty = "9.4.51.v20230217"
-jersey = "2.39.1"
+jersey = "2.41"
 mockito = "3.12.4"
 airlift-units = "1.8"
 airlift-log = "231"
 hive2 = "2.3.9"
-hadoop2 = "2.7.3"
+hadoop2 = "2.10.2"
 httpclient5 = "5.2.1"
-mockserver = "5.13.2"
-commons-lang3 = "3.12.0"
-commons-io = "2.11.0"
+mockserver = "5.15.0"
+commons-lang3 = "3.14.0"
+commons-io = "2.15.0"
 commons-collections4 = "4.4"
-commons-dbcp2 = "2.9.0"
+commons-dbcp2 = "2.11.0"
 caffeine = "2.9.3"
-rocksdbjni = "7.7.3"
-iceberg = '1.3.1'
+rocksdbjni = "7.10.2"
+iceberg = '1.4.2'
 trino = '426'
-spark = "3.4.1"
+spark = "3.4.1" # 3.5.0 causes tests to fail
 scala-collection-compat = "2.7.0"
 sqlite-jdbc = "3.42.0.0"
 testng = "7.5.1"
