--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@
 junit = "5.8.1"
 protoc = "3.24.4"
 jackson = "2.15.2"
-guava = "32.1.3-jre"
+guava = "31.1-jre"
 lombok = "1.18.20"
 slf4j = "2.0.9"
 log4j = "2.22.0"
@@ -25,7 +25,7 @@ commons-collections4 = "4.4"
 commons-dbcp2 = "2.11.0"
 caffeine = "2.9.3"
 rocksdbjni = "7.10.2"
-iceberg = '1.4.2'
+iceberg = '1.3.1' # 1.4.0 causes test to fail
 trino = '426'
 spark = "3.4.1" # 3.5.0 causes tests to fail
 scala-collection-compat = "2.7.0"
@@ -42,7 +42,6 @@ publish-plugin = '1.2.0'
 rat-plugin = '0.8.0'
 shadow-plugin = "8.1.1"
 metrics = "4.2.19"
-
 
 [libraries]
 protobuf-java = { group = "com.google.protobuf", name = "protobuf-java", version.ref = "protoc" }
