[#699] feat(trino-connector) Support Iceberg catalogs in trino-connector (#858)
### What changes were proposed in this pull request?
Support Iceberg catalogs in trino-connector. 

1、create iceberg catalog in gravitino.
```
curl -X POST -H "Content-Type: application/json" -d '{"name":"iceberg_test","type":"RELATIONAL","comment":"comment","provider":"lakehouse-iceberg", "properties":{"uri":"thrift://localhost:9083","catalog-backend":"hive","warehouse":"hdfs://localhost:9000/user/iceberg/warehouse"}}' http://localhost:8090/api/metalakes/test/catalogs
```
2、create schema and table in Trino using iceberg catalog.
```
CREATE SCHEMA "test.iceberg_test".db03;

create table "test.iceberg_test".db03.tb01
(
name varchar,
salary int 
);

insert into "test.iceberg_test".db03.tb01(name, salary) values ('sam', 11);

select * from  "test.iceberg_test".db03.tb01;
```

### Why are the changes needed?

Feature: #699

### How was this patch tested?
IT

---------

Co-authored-by: Jerry Shao <jerryshao@datastrato.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,8 @@ testng = "7.5.1"
 testcontainers = "1.19.0"
 trino-jdbc = "426"
 jwt = "0.11.1"
+jline = "3.21.0"
+okhttp3 = "4.11.0"
 
 protobuf-plugin = "0.9.2"
 spotless-plugin = '6.11.0'
@@ -98,6 +100,8 @@ trino-spi= { group = "io.trino", name = "trino-spi", version.ref = "trino" }
 trino-toolkit= { group = "io.trino", name = "trino-plugin-toolkit", version.ref = "trino" }
 trino-testing= { group = "io.trino", name = "trino-testing", version.ref = "trino" }
 trino-memory= { group = "io.trino", name = "trino-memory", version.ref = "trino" }
+trino-cli= { group = "io.trino", name = "trino-cli", version.ref = "trino" }
+trino-client= { group = "io.trino", name = "trino-client", version.ref = "trino" }
 iceberg-spark-runtime = { group = "org.apache.iceberg", name = "iceberg-spark-runtime-3.4_2.13", version.ref = "iceberg" }
 spark-sql = { group = "org.apache.spark", name = "spark-sql_2.13", version.ref = "spark" }
 scala-collection-compat =  { group = "org.scala-lang.modules", name = "scala-collection-compat_2.13", version.ref = "scala-collection-compat" }
@@ -116,6 +120,8 @@ metrics-core = { group = "io.dropwizard.metrics", name = "metrics-core", version
 metrics-jersey2 = { group = "io.dropwizard.metrics", name = "metrics-jersey2", version.ref = "metrics" }
 metrics-jvm = { group = "io.dropwizard.metrics", name = "metrics-jvm", version.ref = "metrics" }
 metrics-jmx = { group = "io.dropwizard.metrics", name = "metrics-jmx", version.ref = "metrics" }
+jline-terminal = { group = "org.jline", name = "jline-terminal", version.ref = "jline" }
+okhttp3-loginterceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp3" }
 metrics-servlets = { group = "io.dropwizard.metrics", name = "metrics-servlets", version.ref = "metrics" }
 prometheus-client = { group = "io.prometheus", name = "simpleclient", version.ref = "prometheus" }
 prometheus-dropwizard = { group = "io.prometheus", name = "simpleclient_dropwizard", version.ref = "prometheus" }
