Standardizing docker names

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,8 @@ on:
           - 'gravitino'
           - 'gravitino-ci-hive'
           - 'gravitino-ci-trino'
+          - 'trino'
+          - 'hive'
       tag:
         description: 'Docker tag to apply to this image'
         required: true
@@ -40,6 +42,12 @@ jobs:
           elif [ "${{ github.event.inputs.image }}" == "gravitino" ]; then
             echo "image_type=gravitino" >> $GITHUB_ENV
             echo "image_name=datastrato/gravitino" >> $GITHUB_ENV
+          elif [ "${{ github.event.inputs.image }}" == "trino" ]; then
+            echo "image_type=trino" >> $GITHUB_ENV
+            echo "image_name=datastrato/trino" >> $GITHUB_ENV
+          elif [ "${{ github.event.inputs.image }}" == "hive" ]; then
+            echo "image_type=hive" >> $GITHUB_ENV
+            echo "image_name=datastrato/hive" >> $GITHUB_ENV
           fi
 
       - name: Check publish Docker token
