--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,35 @@ concurrency:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  paths-filer:
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.filter.outputs.workflows }}
+      steps:
+        - uses: actions/checkout@v3
+        - uses: dorny/paths-filter@v2
+          id: filter
+          with:
+            filters: |
+              source_changes:
+                    - api/**
+                    - catalogs/**
+                    - clients/**
+                    - common/**
+                    - core/**
+                    - integration-test/**
+                    - meta/**
+                    - server-common/**
+                    - trino-connect/**
+                    - web/**
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     timeout-minutes: 30
-
+    needs: paths-filter
+    if: steps.changes.outputs.source_changes == true
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
