--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ concurrency:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  paths-filer:
+  changes:
     runs-on: ubuntu-latest
     outputs:
       output1: ${{ steps.filter.outputs.workflows }}
@@ -41,7 +41,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    needs: paths-filter
+    needs: changes
     if: steps.changes.outputs.source_changes == true
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
