--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -13,8 +13,32 @@ concurrency:
   cancel-in-progress: ${{ github.event_name == 'pull_requests' }}
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.filter.outputs.workflows }}
+      steps:
+        - uses: actions/checkout@v3
+        - uses: dorny/paths-filter@v2
+          id: filter
+          with:
+            filters: |
+              source_changes:
+                    - api/**
+                    - catalogs/**
+                    - clients/**
+                    - common/**
+                    - core/**
+                    - integration-test/**
+                    - meta/**
+                    - server-common/**
+                    - trino-connect/**
+                    - web/**
+
   # Integration test for AMD64 architecture
   test-amd64-arch:
+    needs: changes
+    if: steps.changes.outputs.source_changes == true
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
