--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
   pull_request:
     branches: [ "main", "branch-*" ]
 
+concurrency:
+  group: ${{ github.worklfow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: ${{ github.event_name == 'pull_requests' }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   changes:
