add oauth in web

--- a/web/.env
+++ b/web/.env
@@ -4,3 +4,5 @@
 #
 
 OUTPUT_MODE=standalone
+NEXT_PUBLIC_API_URL=http://localhost:8090/api
+NEXT_PUBLIC_OAUTH_URL=http://localhost:9010/oauth2/token
