--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
               - core/**
               - integration-test/**
               - meta/**
+              - server/**
               - server-common/**
               - trino-connect/**
               - web/**
