--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -29,6 +29,7 @@ jobs:
               - core/**
               - integration-test/**
               - meta/**
+              - server/**
               - server-common/**
               - trino-connect/**
               - web/**
