--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
               - server-common/**
               - trino-connect/**
               - web/**
+    outputs:
+      source_changes: ${{ steps.filter.outputs.source_changes }}
 
   # This workflow contains a single job called "build"
   build:
