--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           filters: |
             source_changes:
+              - .github/**
               - api/**
               - bin/**
               - catalogs/**
