--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           filters: |
             source_changes:
+              - .github/**
               - api/**
               - bin/**
               - catalogs/**
