--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -38,6 +38,7 @@ jobs:
               - server-common/**
               - trino-connector/**
               - web/**
+              - build.gradle.kts
               - gradle.properties
               - gradlew
               - setting.gradle.kts
