[#949] fix(licence): IP issues with 3rd party code (#957)
### What changes were proposed in this pull request?
1. add apache header
2. modify licence and notice file

### Why are the changes needed?

Fix: #949 

### Does this PR introduce _any_ user-facing change?
no

### How was this patch tested?
existing ut

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,6 +14,9 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
+  ~
+  ~ Referred from Apache Zeppelin's web.xml implementation
+  ~ zeppelin-web/src/WEB-INF/web.xml
   -->
 
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
