[#968] improvement(ci): Run the pipeline only if there are changes about the files which are not document (#967)
### What changes were proposed in this pull request?
Run the pipeline only if there are changes about the files which are not
document.

### Why are the changes needed?


Fix: #968 

### Does this PR introduce _any_ user-facing change?
No.

### How was this patch tested?
Yes, I run the action in my repo.
You can see 
Only docs change.
https://github.com/qqqttt123/gravitino/pull/10
Source code changes.
https://github.com/qqqttt123/gravitino/pull/11

---------

Co-authored-by: Heng Qin <qqtt@123.com>

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -13,8 +13,42 @@ concurrency:
   cancel-in-progress: ${{ github.event_name == 'pull_requests' }}
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            source_changes:
+              - .github/**
+              - api/**
+              - bin/**
+              - catalogs/**
+              - clients/**
+              - common/**
+              - conf/**
+              - core/**
+              - dev/**
+              - gradle/**
+              - integration-test/**
+              - meta/**
+              - server/**
+              - server-common/**
+              - trino-connector/**
+              - web/**
+              - build.gradle.kts
+              - gradle.properties
+              - gradlew
+              - setting.gradle.kts
+    outputs:
+      source_changes: ${{ steps.filter.outputs.source_changes }}
+
   # Integration test for AMD64 architecture
   test-amd64-arch:
+    needs: changes
+    if: needs.changes.outputs.source_changes == 'true'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
