--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,6 +48,7 @@ gradle-extensions-plugin = '1.74'
 publish-plugin = '1.2.0'
 rat-plugin = '0.8.0'
 shadow-plugin = "8.1.1"
+node-plugin = "3.1.0"
 
 [libraries]
 protobuf-java = { group = "com.google.protobuf", name = "protobuf-java", version.ref = "protoc" }
@@ -148,3 +149,4 @@ gradle-extensions = { id = "com.github.vlsi.gradle-extensions", version.ref = "g
 publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish-plugin" }
 rat = { id = "org.nosphere.apache.rat", version.ref = "rat-plugin" }
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow-plugin" }
+node = { id = "com.github.node-gradle.node", version.ref = "node-plugin" }
