--- a/web/.env.static
+++ b/web/.env.static
@@ -4,5 +4,7 @@
 #
 
 OUTPUT_MODE=export
-NEXT_PUBLIC_API_URL=http://localhost:8090/api
-NEXT_PUBLIC_OAUTH_URL=http://localhost:9010/oauth2/token
+# Development ENV
+NEXT_PUBLIC_API_URL=http://localhost:8090
+NEXT_PUBLIC_OAUTH_URI=http://localhost:9010
+NEXT_PUBLIC_OAUTH_PATH=/oauth2/token
