--- a/catalogs/catalog-jdbc-mysql/src/main/resources/jdbc-mysql.conf
+++ b/catalogs/catalog-jdbc-mysql/src/main/resources/jdbc-mysql.conf
@@ -5,3 +5,5 @@
 # jdbc-url: jdbc:mysql://localhost:3306/
 # jdbc-user: strato
 # jdbc-password: strato
+# jdbc-driver: com.mysql.jdbc.Driver
+# jdbc-driver: com.mysql.cj.jdbc.Driver
