add provider required fields

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -17,6 +17,8 @@
     "heroicons",
     "hookform",
     "iconify",
+    "jdbc",
+    "lakehouse",
     "metalake",
     "metalakes",
     "metastore",
