[#990] feat(UI): Add create catalog in webUI (#991)
### What changes were proposed in this pull request?

Create a catalog with actual data in the web UI.
<img width="717" alt="image"
src="https://github.com/datastrato/gravitino/assets/17310559/950ad907-a701-4aad-8e43-5b592ddb74f3">

### Why are the changes needed?

Fix: #990 

### Does this PR introduce _any_ user-facing change?

No

### How was this patch tested?

No

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -17,8 +17,11 @@
     "heroicons",
     "hookform",
     "iconify",
+    "jdbc",
+    "lakehouse",
     "metalake",
     "metalakes",
+    "metastore",
     "Neue",
     "nextui",
     "nprogress",
