[#1021] improvment: Add the Mysql service and the PG service for the playground Docker image

--- a/dev/docker/playground/docker-compose.yaml
+++ b/dev/docker/playground/docker-compose.yaml
@@ -66,3 +66,45 @@ services:
         limits:
           cpus: "1"
           memory: 1G
+
+  postgresql:
+    image: postgres:13
+    container_name: postgresql
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      ALLOW_IP_RANGE: 0.0.0.0/0
+    ports:
+      - "5432:5432"
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+
+  mysql:
+    image: mysql:8.0
+    container_name: mysql
+    ports:
+      - "3307:3306"
+    volumes:
+      - ./init/mysql:/docker-entrypoint-initdb.d/
+    environment:
+      MYSQL_ROOT_PASSWORD: mysql
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: mysql
+      MYSQL_DATABASE: db
+    command:
+      --default-authentication-plugin=mysql_native_password
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_general_ci
+      --explicit_defaults_for_timestamp=true
+      --lower_case_table_names=1
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+
+
