--- a/dev/docker/playground/docker-compose.yaml
+++ b/dev/docker/playground/docker-compose.yaml
@@ -34,6 +34,8 @@ services:
         condition: service_healthy
     volumes:
       - ./healthcheck:/tmp/healthcheck
+      - ./init/gravitino:/tmp/gravitino
+    command: sh /tmp/gravitino/download_jdbc.sh
     deploy:
       resources:
         limits:
