--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "yarn": ">=1.22.19"
   },
   "scripts": {
+    "analyze": "env-cmd -f .env.analyze yarn build",
     "server": "next dev --turbo",
     "build": "yarn format && next build",
     "dist": "env-cmd -f .env.static yarn build",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "@next/bundle-analyzer": "^14.0.4",
     "autoprefixer": "^10.4.16",
     "env-cmd": "^10.1.0",
     "eslint": "^8",
