[MINOR] fix(dev): Expose the port of Iceberg RESTFUL Service

--- a/dev/docker/gravitino/Dockerfile
+++ b/dev/docker/gravitino/Dockerfile
@@ -10,5 +10,6 @@ WORKDIR /root/gravitino
 COPY packages/gravitino /root/gravitino
 
 EXPOSE 8090
+EXPOSE 9001
 
 ENTRYPOINT ["/bin/bash", "/root/gravitino/bin/gravitino.sh", "start"]
